add app logic and collections

--- a/ShoutBux-app/client/stylesheet/style.css
+++ b/ShoutBux-app/client/stylesheet/style.css
@@ -90,3 +90,11 @@
   margin-left: 10px;
 }
 
+.avatar {
+  border-radius: 7px;
+  box-sizing: border-box;
+  color: #fff;
+  height: 72px;
+  width: 72px;
+}
+
